--- a/src/index.css
+++ b/src/index.css
@@ -5,330 +5,305 @@
 @tailwind utilities;
 
 * {
-   margin: 0;
-   padding: 0;
-   box-sizing: border-box;
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
 }
 
 body {
-   scroll-behavior: smooth;
+  scroll-behavior: smooth;
 }
 
 @font-face {
-   font-family: lufga;
-   src: url(./fonts/LufgaRegular.ttf);
+  font-family: lufga;
+  src: url(./fonts/LufgaRegular.ttf);
 }
 
 @layer base {
-   body {
-      @apply bg-background text-primary font-bodyContent font-normal absolute inset-0 -z-10 h-full w-full  bg-[radial-gradient(#e5e7eb_1px,transparent_1px)] [background-size:16px_16px];
-   }
-
-   span {
-      @apply text-secondary;
-   }
-
-   input {
-      @apply bg-transparent outline-none border border-secondary p-2 text-center  rounded-xl;
-   }
-}
-
-/* .card {
-  width: 400px;
-  height: 254px;
-  background: #07182E;
-  position: relative;
-  display: flex;
-  place-content: center;
-  place-items: center;
-  overflow: hidden;
-  border-radius: 20px;
-}
-
-.card h2 {
-  z-index: 1;
-  color: white;
-  font-size: 2em;
-}
-
-.card::before {
-  content: '';
-  position: absolute;
-  width: 400px;
-  background-image: linear-gradient(180deg, rgb(0, 183, 255), rgb(255, 48, 255));
-  height: 130%;
-  animation: rotBGimg 3s linear infinite;
-  transition: all 0.2s linear;
-}
-
-@keyframes rotBGimg {
-  from {
-    transform: rotate(0deg);
+  body {
+    @apply bg-background text-primary font-bodyContent font-normal absolute inset-0 -z-10 h-full w-full bg-[radial-gradient(#e5e7eb_1px,transparent_1px)] [background-size:16px_16px];
   }
 
-  to {
-    transform: rotate(360deg);
+  span {
+    @apply text-secondary;
+  }
+
+  input {
+    @apply bg-transparent outline-none border border-secondary p-2 text-center rounded-xl;
+  }
+
+  :root {
+    --background: 0 0% 100%;
+    --foreground: 0 0% 3.9%;
+    --card: 0 0% 100%;
+    --card-foreground: 0 0% 3.9%;
+    --popover: 0 0% 100%;
+    --popover-foreground: 0 0% 3.9%;
+    --primary: 0 0% 9%;
+    --primary-foreground: 0 0% 98%;
+    --secondary: 0 0% 96.1%;
+    --secondary-foreground: 0 0% 9%;
+    --muted: 0 0% 96.1%;
+    --muted-foreground: 0 0% 45.1%;
+    --accent: 0 0% 96.1%;
+    --accent-foreground: 0 0% 9%;
+    --destructive: 0 84.2% 60.2%;
+    --destructive-foreground: 0 0% 98%;
+    --border: 0 0% 89.8%;
+    --input: 0 0% 89.8%;
+    --ring: 0 0% 3.9%;
+    --chart-1: 12 76% 61%;
+    --chart-2: 173 58% 39%;
+    --chart-3: 197 37% 24%;
+    --chart-4: 43 74% 66%;
+    --chart-5: 27 87% 67%;
+    --radius: 0.5rem;
+  }
+
+  .dark {
+    --background: 0 0% 3.9%;
+    --foreground: 0 0% 98%;
+    --card: 0 0% 3.9%;
+    --card-foreground: 0 0% 98%;
+    --popover: 0 0% 3.9%;
+    --popover-foreground: 0 0% 98%;
+    --primary: 0 0% 98%;
+    --primary-foreground: 0 0% 9%;
+    --secondary: 0 0% 14.9%;
+    --secondary-foreground: 0 0% 98%;
+    --muted: 0 0% 14.9%;
+    --muted-foreground: 0 0% 63.9%;
+    --accent: 0 0% 14.9%;
+    --accent-foreground: 0 0% 98%;
+    --destructive: 0 62.8% 30.6%;
+    --destructive-foreground: 0 0% 98%;
+    --border: 0 0% 14.9%;
+    --input: 0 0% 14.9%;
+    --ring: 0 0% 83.1%;
+    --chart-1: 220 70% 50%;
+    --chart-2: 160 60% 45%;
+    --chart-3: 30 80% 55%;
+    --chart-4: 280 65% 60%;
+    --chart-5: 340 75% 55%;
   }
 }
-
-.card::after {
-  content: '';
-  position: absolute;
-  background: #07182E;
-  ;
-  inset: 5px;
-  border-radius: 15px;
-}   */
 
 .parent {
-   width: 700px;
-   height: 500px;
-   perspective: 1000px;
+  width: 700px;
+  height: 500px;
+  perspective: 1000px;
 }
 
 @media screen and (max-width: 600px) {
-   .parent {
-      width: 300px;
-      height: 400px;
-      perspective: 1000px;
-   }
+  .parent {
+    width: 300px;
+    height: 400px;
+    perspective: 1000px;
+  }
 }
 
 .card {
-   height: 100%;
-   border-radius: 50px;
-   background: linear-gradient(
-      135deg,
-      rgb(255, 165, 0) 0%,
-      rgb(255, 99, 71) 100%
-   );
-   transition: all 0.5s ease-in-out;
-   transform-style: preserve-3d;
-   box-shadow:
-      rgba(255, 69, 0, 0) 40px 50px 25px -40px,
-      rgba(255, 69, 0, 0.2) 0px 25px 25px -5px;
+  height: 75%;
+  border-radius: 50px;
+  background: linear-gradient(135deg, rgb(255, 165, 0) 0%, rgb(255, 99, 71) 100%);
+  transition: all 0.5s ease-in-out;
+  transform-style: preserve-3d;
+  box-shadow: rgba(255, 69, 0, 0) 40px 50px 25px -40px, rgba(255, 69, 0, 0.2) 0px 25px 25px -5px;
+  color: black;
+  
 }
 
 .glass {
-   transform-style: preserve-3d;
-   position: absolute;
-   inset: 8px;
-   border-radius: 55px;
-   border-top-right-radius: 100%;
-   background: linear-gradient(
-      0deg,
-      rgba(255, 255, 255, 0.349) 0%,
-      rgba(255, 255, 255, 0.815) 100%
-   );
-   /* -webkit-backdrop-filter: blur(5px);
-  backdrop-filter: blur(5px); */
-   transform: translate3d(0px, 0px, 25px);
-   border-left: 1px solid white;
-   border-bottom: 1px solid white;
-   transition: all 0.5s ease-in-out;
+  transform-style: preserve-3d;
+  position: absolute;
+  inset: 8px;
+  border-radius: 55px;
+  border-top-right-radius: 100%;
+  background: linear-gradient(0deg, rgba(255, 255, 255, 0.349) 0%, rgba(255, 255, 255, 0.815) 100%);
+  transform: translate3d(0px, 0px, 25px);
+  border-left: 1px solid white;
+  border-bottom: 1px solid white;
+  transition: all 0.5s ease-in-out;
 }
 
 .content {
-   padding: 100px 60px 0px 30px;
-   transform: translate3d(0, 0, 26px);
+  padding: 100px 60px 0px 30px;
+  transform: translate3d(0, 0, 26px);
 }
 
 .content .title {
-   display: block;
-   color: #e67e22;
-   font-weight: 900;
-   font-size: 20px;
+  display: block;
+  color: #e67e22;
+  font-weight: 900;
+  font-size: 20px;
+  /* padding: 3; */
 }
 
 .content .text {
-   display: block;
-   color: #000;
-   font-size: 15px;
-   margin-top: 20px;
+  display: block;
+  color: #000;
+  font-size: 15px;
+  margin-top: 20px;
 }
 
 .bottom {
-   padding: 10px 12px;
-   transform-style: preserve-3d;
-   position: absolute;
-   bottom: 20px;
-   left: 20px;
-   right: 20px;
-   display: flex;
-   align-items: center;
-   justify-content: space-between;
-   transform: translate3d(0, 0, 26px);
+  padding: 10px 12px;
+  transform-style: preserve-3d;
+  position: absolute;
+  bottom: 20px;
+  left: 20px;
+  right: 20px;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  transform: translate3d(0, 0, 26px);
 }
 
 .bottom .view-more {
-   display: flex;
-   align-items: center;
-   width: 40%;
-   justify-content: flex-end;
-   transition: all 0.2s ease-in-out;
+  display: flex;
+  align-items: center;
+  width: 40%;
+  justify-content: flex-end;
+  transition: all 0.2s ease-in-out;
 }
 
 .bottom .view-more:hover {
-   transform: translate3d(0, 0, 10px);
+  transform: translate3d(0, 0, 10px);
 }
 
 .bottom .view-more .view-more-button {
-   background: none;
-   border: none;
-   color: #ffa07a;
-   font-weight: bolder;
-   font-size: 12px;
+  background: none;
+  border: none;
+  color: #ffa07a;
+  font-weight: bolder;
+  font-size: 12px;
 }
 
 .bottom .view-more .svg {
-   fill: none;
-   stroke: #ffa07a;
-   stroke-width: 3px;
-   max-height: 15px;
+  fill: none;
+  stroke: #ffa07a;
+  stroke-width: 3px;
+  max-height: 15px;
 }
 
 .bottom .social-buttons-container {
-   display: flex;
-   gap: 10px;
-   transform-style: preserve-3d;
+  display: flex;
+  gap: 10px;
+  transform-style: preserve-3d;
 }
 
 .bottom .social-buttons-container .social-button {
-   width: 30px;
-   aspect-ratio: 1;
-   padding: 5px;
-   background: rgb(255, 255, 255);
-   border-radius: 50%;
-   border: none;
-   display: grid;
-   place-content: center;
-   box-shadow: rgba(255, 69, 0, 0.5) 0px 7px 5px -5px;
+  width: 30px;
+  aspect-ratio: 1;
+  padding: 5px;
+  background: rgb(255, 255, 255);
+  border-radius: 50%;
+  border: none;
+  display: grid;
+  place-content: center;
+  box-shadow: rgba(255, 69, 0, 0.5) 0px 7px 5px -5px;
 }
 
 .bottom .social-buttons-container .social-button:first-child {
-   transition:
-      transform 0.2s ease-in-out 0.4s,
-      box-shadow 0.2s ease-in-out 0.4s;
+  transition: transform 0.2s ease-in-out 0.4s, box-shadow 0.2s ease-in-out 0.4s;
 }
 
 .bottom .social-buttons-container .social-button:nth-child(2) {
-   transition:
-      transform 0.2s ease-in-out 0.6s,
-      box-shadow 0.2s ease-in-out 0.6s;
+  transition: transform 0.2s ease-in-out 0.6s, box-shadow 0.2s ease-in-out 0.6s;
 }
 
 .bottom .social-buttons-container .social-button:nth-child(3) {
-   transition:
-      transform 0.2s ease-in-out 0.8s,
-      box-shadow 0.2s ease-in-out 0.8s;
+  transition: transform 0.2s ease-in-out 0.8s, box-shadow 0.2s ease-in-out 0.8s;
 }
 
 .bottom .social-buttons-container .social-button .svg {
-   width: 15px;
-   fill: #e67e22;
+  width: 15px;
+  fill: #e67e22;
 }
 
 .bottom .social-buttons-container .social-button:hover {
-   background: black;
+  background: black;
 }
 
 .bottom .social-buttons-container .social-button:hover .svg {
-   fill: white;
+  fill: white;
 }
 
 .bottom .social-buttons-container .social-button:active {
-   background: rgb(255, 234, 0);
+  background: rgb(255, 234, 0);
 }
 
 .bottom .social-buttons-container .social-button:active .svg {
-   fill: black;
+  fill: black;
 }
 
 .logo {
-   position: absolute;
-   right: 0;
-   top: 0;
-   transform-style: preserve-3d;
+  position: absolute;
+  right: 0;
+  top: 0;
+  transform-style: preserve-3d;
+  padding: 10px;
 }
 
-.logo .circle {
-   display: block;
-   position: absolute;
-   aspect-ratio: 1;
-   border-radius: 50%;
-   top: 0;
-   right: 0;
-   box-shadow: rgba(100, 100, 111, 0.2) -10px 10px 20px 0px;
-   -webkit-backdrop-filter: blur(5px);
-   backdrop-filter: blur(5px);
-   background: rgba(255, 165, 0, 0.2);
-   transition: all 0.5s ease-in-out;
+.logo a {
+  display: flex;
 }
 
-.logo .circle1 {
-   width: 170px;
-   transform: translate3d(0, 0, 20px);
-   top: 8px;
-   right: 8px;
+.logo .svg {
+  transform-style: preserve-3d;
+  width: 30px;
+  height: 30px;
+  padding: 10px;
+  background: black;
+  border-radius: 50%;
+  box-shadow: rgba(255, 69, 0, 0.5) 0px 7px 5px -5px;
+  fill: white;
 }
 
-.logo .circle2 {
-   width: 140px;
-   transform: translate3d(0, 0, 40px);
-   top: 10px;
-   right: 10px;
-   -webkit-backdrop-filter: blur(1px);
-   backdrop-filter: blur(1px);
-   transition-delay: 0.4s;
+.view-more {
+  display: flex;
+  align-items: center;
+  width: 40%;
+  justify-content: flex-end;
+  transition: all 0.2s ease-in-out;
 }
 
-.logo .circle3 {
-   width: 110px;
-   transform: translate3d(0, 0, 60px);
-   top: 17px;
-   right: 17px;
-   transition-delay: 0.8s;
+.view-more:hover {
+  transform: translate3d(0, 0, 10px);
 }
 
-.logo .circle4 {
-   width: 80px;
-   transform: translate3d(0, 0, 80px);
-   top: 23px;
-   right: 23px;
-   transition-delay: 1.2s;
+.view-more-button {
+  background: none;
+  border: none;
+  color: #ffa07a;
+  font-weight: bolder;
+  font-size: 12px;
 }
 
-.logo .circle5 {
-   width: 50px;
-   transform: translate3d(0, 0, 100px);
-   top: 30px;
-   right: 30px;
-   display: grid;
-   place-content: center;
-   transition-delay: 1.6s;
+.view-more-svg {
+  fill: none;
+  stroke: #ffa07a;
+  stroke-width: 3px;
+  max-height: 15px;
 }
 
-.logo .circle5 .svg {
-   width: 20px;
-   fill: white;
+@media screen and (max-width: 600px) {
+  .bottom .social-buttons-container {
+    justify-content: center;
+  }
 }
 
-.parent:hover .card {
-   transform: rotate3d(1, 1, 0, 30deg);
-   box-shadow:
-      rgba(255, 69, 0, 0.3) 30px 50px 25px -40px,
-      rgba(255, 69, 0, 0.1) 0px 25px 30px 0px;
+.logo-svg {
+  transform-style: preserve-3d;
+  width: 30px;
+  height: 30px;
+  padding: 10px;
+  background: black;
+  border-radius: 50%;
+  box-shadow: rgba(255, 69, 0, 0.5) 0px 7px 5px -5px;
+  fill: white;
 }
 
-.parent:hover .card .bottom .social-buttons-container .social-button {
-   transform: translate3d(0, 0, 50px);
-   box-shadow: rgba(255, 69, 0, 0.2) -5px 20px 10px 0px;
-}
-
-.parent:hover .card .logo .circle2 {
-   transform: translate3d(0, 0, 60px);
-}
-
-.parent:hover .card .logo .circle3 {
-   transform: translate3d(0, 0, 80px);
+.dark .content .title {
+  color: #ffa07a;
 }
